# soundstage

./: .eslintrc.json  .gitignore  .gitmodules  CNAME  Makefile  README-clock.md  README.md  benchmark.html  clock.html  deno.json  example-game-stage.html  fader-control.html  guitar.css  guitar.html  gulpfile.js  index-old.html  index.html  index.html.bolt  index.js  index.template.html  karma.conf.js  literal.json  loop.html  looper.html  midi.html  module.css  module.js  package-lock.json  package.json  param-test.html  piano.html  sample-map.html  schema.js  song.json  soundstage.js  style.css  style.min.css  template.html  test-location.html  test.html  (+1 more)
bash/: wav-to-m4a.sh
clock/: README.md  clock.html  index.html  test.html
collection/: README.md  index.html
css/: guitar.css  node-block.css  respond.css  respond.scss  soundstage-inspector.css  theme.css  thumb.css
docs/: automate.md  canvas.md  clock.md  control.md  event.md  graph.md  inspector.md  keyboard-input-source.md  location.md  meter.md  midi-input-source.md  playable.md  playable.md.literal  sequence.md  sequencer.md  soundstage.md
elements/: range-control.css  soundstage-instrument.css  soundstage-instrument.html  soundstage-instrument.js  soundstage-player.js
examples/: drum-stage.json
js/: chain.js  clock.js  create-id.js  cue-stream.js  cue-stream___.js  cue-timer.js  distribute.js  event-distributor.js  event-stream.js  event.js  generator-stream.js  graph.js  location.js  loop.js  meter.js  meter.worklet.js  metronome.js  (+54 more)
nodes/compressor/: Cargo.toml
nodes/compressor/src/: lib.rs
(+595 files in other folders)
